--- a/data/cards/01712616.yaml
+++ b/data/cards/01712616.yaml
@@ -41,9 +41,17 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-EN179
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: DAMA-DE091
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-DE179
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -51,14 +59,26 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-FR179
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: DAMA-IT091
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-IT179
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: DAMA-PT091
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-PT179
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
