--- a/data/cards/16165939.yaml
+++ b/data/cards/16165939.yaml
@@ -41,26 +41,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN224
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE067
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE224
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR067
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR224
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT067
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT224
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT067
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT224
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP067
     set_name: Burst of Destiny
