--- a/data/cards/20295753.yaml
+++ b/data/cards/20295753.yaml
@@ -44,9 +44,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN232
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
-  - set_number: BODE-FR081
+  - set_number: BODE-DE081
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE232
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -54,14 +62,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR232
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT081
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT232
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT081
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT232
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
