--- a/data/cards/21293424.yaml
+++ b/data/cards/21293424.yaml
@@ -75,9 +75,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN215
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE049
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE215
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -85,14 +93,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR215
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT049
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT215
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT049
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT215
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
