--- a/data/cards/23213239.yaml
+++ b/data/cards/23213239.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN248
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE097
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE248
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR097
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR248
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT097
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT248
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT097
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT248
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP19-JP037
     set_name: Extra Pack 2019
