--- a/data/cards/28762303.yaml
+++ b/data/cards/28762303.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN190
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE009
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE190
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR190
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT009
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT190
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT009
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT190
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
