--- a/data/cards/32176662.yaml
+++ b/data/cards/32176662.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN243
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE092
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE243
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR243
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT092
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT243
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT092
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT243
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
