--- a/data/cards/33314479.yaml
+++ b/data/cards/33314479.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-EN181
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: DAMA-DE093
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-DE181
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-FR181
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: DAMA-IT093
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-IT181
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: DAMA-PT093
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-PT181
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
