--- a/data/cards/34198387.yaml
+++ b/data/cards/34198387.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN207
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE034
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE207
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR034
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR207
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT034
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT207
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT034
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT207
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP034
     set_name: Burst of Destiny
