--- a/data/cards/40633084.yaml
+++ b/data/cards/40633084.yaml
@@ -42,9 +42,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN242
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE091
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE242
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -52,14 +60,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR242
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT091
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT242
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT091
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT242
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
