--- a/data/cards/51578214.yaml
+++ b/data/cards/51578214.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN236
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
-  - set_number: BODE-FR085
+  - set_number: BODE-DE085
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE236
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR236
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT085
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT236
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT085
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT236
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
