--- a/data/cards/53212882.yaml
+++ b/data/cards/53212882.yaml
@@ -48,30 +48,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-EN193
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE012
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-DE193
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR012
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-FR193
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT012
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-IT193
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT012
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-PT193
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP012
     set_name: Burst of Destiny
