--- a/data/cards/53286626.yaml
+++ b/data/cards/53286626.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN223
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE065
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE223
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR065
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR223
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT065
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT223
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT065
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT223
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP065
     set_name: Burst of Destiny
