--- a/data/cards/54334420.yaml
+++ b/data/cards/54334420.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN195
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE014
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE195
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR014
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR195
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT014
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT195
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT014
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT195
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP014
     set_name: Burst of Destiny
