--- a/data/cards/54408264.yaml
+++ b/data/cards/54408264.yaml
@@ -43,9 +43,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN222
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE062
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE222
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -53,14 +61,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR222
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT062
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT222
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT062
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT222
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
