--- a/data/cards/54693926.yaml
+++ b/data/cards/54693926.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-EN262
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TN19-DE014
     set_name: 2019 Gold Sarcophagus Tin
@@ -62,6 +66,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-DE262
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TN19-FR014
     set_name: 2019 Gold Sarcophagus Tin
@@ -75,6 +83,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-FR262
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TN19-IT014
     set_name: 2019 Gold Sarcophagus Tin
@@ -88,6 +100,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-IT262
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TN19-PT014
     set_name: 2019 Gold Sarcophagus Tin
@@ -101,6 +117,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-PT262
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP19-JP068
     set_name: Extra Pack 2019
