--- a/data/cards/62015408.yaml
+++ b/data/cards/62015408.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-EN256
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   - set_number: OP20-EN0??
     set_name: OTS Tournament Pack 20
     rarities:
@@ -104,6 +108,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-DE256
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: SHVI-FR040
     set_name: Shining Victories
@@ -129,6 +137,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-FR256
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: SHVI-IT040
     set_name: Shining Victories
@@ -154,6 +166,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-IT256
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: SHVI-PT040
     set_name: Shining Victories
@@ -179,6 +195,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-PT256
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: SHVI-JP040
     set_name: Shining Victories
