--- a/data/cards/62481203.yaml
+++ b/data/cards/62481203.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-EN184
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: DAMA-DE098
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-DE184
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: DAMA-FR098
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-FR184
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: DAMA-IT098
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-IT184
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: DAMA-PT098
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-PT184
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: LVDS-JPA05
     set_name: LINK VRAINS Duelist Set
