--- a/data/cards/64213017.yaml
+++ b/data/cards/64213017.yaml
@@ -41,26 +41,46 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-EN178
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: DAMA-DE090
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-DE178
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: DAMA-FR090
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-FR178
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: DAMA-IT090
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-IT178
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: DAMA-PT090
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  - set_number: MP22-PT178
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: WPP3-JP010
     set_name: World Premiere Pack 2022
