--- a/data/cards/67127799.yaml
+++ b/data/cards/67127799.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN187
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE001
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE187
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR001
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR187
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT001
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT187
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT001
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT187
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP001
     set_name: Burst of Destiny
