--- a/data/cards/68300121.yaml
+++ b/data/cards/68300121.yaml
@@ -63,26 +63,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN213
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE047
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE213
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR047
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR213
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT047
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT213
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT047
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT213
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP047
     set_name: Burst of Destiny
