--- a/data/cards/69035382.yaml
+++ b/data/cards/69035382.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: OTS Tournament Pack 12
     rarities:
     - Common
+  - set_number: MP22-EN250
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DR1-DE248
     set_name: Dark Revelation Volume 1
@@ -78,6 +82,10 @@ sets:
     set_name: OTS Tournament Pack 12
     rarities:
     - Common
+  - set_number: MP22-DE250
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DR1-FR248
     set_name: Dark Revelation Volume 1
@@ -120,6 +128,10 @@ sets:
     set_name: OTS Tournament Pack 12
     rarities:
     - Common
+  - set_number: MP22-IT250
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DR1-PT248
     set_name: Dark Revelation Volume 1
@@ -129,6 +141,10 @@ sets:
     set_name: OTS Tournament Pack 12
     rarities:
     - Common
+  - set_number: MP22-PT250
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: 305-033
     set_name: Threat of the Dark Demon World
