--- a/data/cards/69522668.yaml
+++ b/data/cards/69522668.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN211
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE044
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE211
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR044
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR211
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT044
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT211
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT044
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT211
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP044
     set_name: Burst of Destiny
