--- a/data/cards/70709488.yaml
+++ b/data/cards/70709488.yaml
@@ -58,9 +58,17 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-EN183
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: DAMA-DE096
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-DE183
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -68,14 +76,26 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-FR183
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: DAMA-IT096
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-IT183
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: DAMA-PT096
     set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-PT183
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
