--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -126,9 +126,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN267
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: LOB-G056
     set_name: Legend of Blue Eyes White Dragon
@@ -219,9 +220,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
-  - set_number: MP22-DE???
+  - set_number: MP22-DE267
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: LDD-F056
     set_name: Legend of Blue Eyes White Dragon
@@ -300,9 +302,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
-  - set_number: MP22-FR???
+  - set_number: MP22-FR267
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: LDD-I056
     set_name: Legend of Blue Eyes White Dragon
@@ -385,9 +388,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
-  - set_number: MP22-IT???
+  - set_number: MP22-IT267
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: LDB-P070
     set_name: Legend of Blue Eyes White Dragon
@@ -449,9 +453,10 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
-  - set_number: MP22-PT???
+  - set_number: MP22-PT267
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.3
