--- a/data/cards/78161361.yaml
+++ b/data/cards/78161361.yaml
@@ -45,9 +45,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN244
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE093
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE244
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -55,14 +63,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR244
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT093
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT244
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT093
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT244
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
