--- a/data/cards/81555617.yaml
+++ b/data/cards/81555617.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN192
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE011
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE192
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR011
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR192
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT011
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT192
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT011
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT192
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP011
     set_name: Burst of Destiny
