--- a/data/cards/82738008.yaml
+++ b/data/cards/82738008.yaml
@@ -55,26 +55,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN219
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE057
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE219
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR057
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR219
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT057
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT219
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT057
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT219
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP057
     set_name: Burst of Destiny
