--- a/data/cards/82777208.yaml
+++ b/data/cards/82777208.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN189
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE008
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE189
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR189
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT008
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT189
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT008
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT189
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
