--- a/data/cards/88962829.yaml
+++ b/data/cards/88962829.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN237
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
-  - set_number: BODE-FR086
+  - set_number: BODE-DE086
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE237
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR086
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR237
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT086
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT237
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT086
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT237
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: WPP3-JP004
     set_name: World Premiere Pack 2022
