--- a/data/cards/89558743.yaml
+++ b/data/cards/89558743.yaml
@@ -41,26 +41,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-EN225
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE069
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-DE225
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR069
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-FR225
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT069
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-IT225
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT069
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-PT225
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP069
     set_name: Burst of Destiny
