--- a/data/cards/94798725.yaml
+++ b/data/cards/94798725.yaml
@@ -74,26 +74,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN214
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE048
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE214
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR048
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR214
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT048
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT214
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT048
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT214
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP048
     set_name: Burst of Destiny
