--- a/data/cards/95911373.yaml
+++ b/data/cards/95911373.yaml
@@ -57,26 +57,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-EN212
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE045
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-DE212
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR045
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-FR212
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT045
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-IT212
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT045
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-PT212
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP045
     set_name: Burst of Destiny
