--- a/data/cards/04433488.yaml
+++ b/data/cards/04433488.yaml
@@ -43,9 +43,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN249
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE099
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE249
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -53,14 +61,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR249
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT099
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT249
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT099
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT249
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
