--- a/data/cards/04550066.yaml
+++ b/data/cards/04550066.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN245
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE094
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE245
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR094
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR245
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT094
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT245
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT094
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT245
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ST19-JP003
     set_name: Starter Deck 2019
