--- a/data/cards/06855503.yaml
+++ b/data/cards/06855503.yaml
@@ -55,26 +55,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN208
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DE038
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE208
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FR038
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR208
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-IT038
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT208
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PT038
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT208
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP038
     set_name: Burst of Destiny
