--- a/data/cards/09822220.yaml
+++ b/data/cards/09822220.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-EN205
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE030
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-DE205
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR030
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-FR205
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT030
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-IT205
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT030
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-PT205
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP030
     set_name: Burst of Destiny
