--- a/data/cards/13234975.yaml
+++ b/data/cards/13234975.yaml
@@ -42,9 +42,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN241
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE090
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE241
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -52,14 +60,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR241
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT090
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT241
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT090
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT241
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
