--- a/data/cards/14357527.yaml
+++ b/data/cards/14357527.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN238
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
-  - set_number: BODE-FR087
+  - set_number: BODE-DE087
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE238
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR087
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR238
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT087
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT238
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT087
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT238
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: WPP3-JP006
     set_name: World Premiere Pack 2022
