--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -71,9 +71,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN253
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: IGAS-DE067
     set_name: Ignition Assault
@@ -85,6 +86,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP22-DE253
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: IGAS-FR067
     set_name: Ignition Assault
@@ -96,6 +101,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP22-FR253
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: IGAS-IT067
     set_name: Ignition Assault
@@ -107,6 +116,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP22-IT253
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: IGAS-PT067
     set_name: Ignition Assault
@@ -118,6 +131,10 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP22-PT253
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: IGAS-JP067
     set_name: Ignition Assault
