--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -104,9 +104,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN257
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: MACR-DE036
     set_name: Maximum Crisis
@@ -136,6 +137,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-DE257
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: MACR-FR036
     set_name: Maximum Crisis
@@ -165,6 +170,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-FR257
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: MACR-IT036
     set_name: Maximum Crisis
@@ -194,6 +203,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-IT257
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: MACR-PT036
     set_name: Maximum Crisis
@@ -223,6 +236,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-PT257
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: MACR-JP036
     set_name: Maximum Crisis
