--- a/data/cards/15943341.yaml
+++ b/data/cards/15943341.yaml
@@ -41,26 +41,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN226
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DE070
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE226
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FR070
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR226
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-IT070
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT226
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PT070
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT226
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP070
     set_name: Burst of Destiny
