--- a/data/cards/16598965.yaml
+++ b/data/cards/16598965.yaml
@@ -61,26 +61,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN230
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE078
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE230
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR078
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR230
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT078
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT230
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT078
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT230
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP078
     set_name: Burst of Destiny
