--- a/data/cards/17827173.yaml
+++ b/data/cards/17827173.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN197
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE016
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE197
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR016
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR197
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT016
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT197
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT016
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT197
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: BODE-JP016
     set_name: Burst of Destiny
