--- a/data/cards/18940725.yaml
+++ b/data/cards/18940725.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN194
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE013
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE194
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR013
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR194
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT013
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT194
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT013
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT194
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP013
     set_name: Burst of Destiny
