--- a/data/cards/25573115.yaml
+++ b/data/cards/25573115.yaml
@@ -40,26 +40,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN235
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
-  - set_number: BODE-FR084
+  - set_number: BODE-DE084
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE235
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR084
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR235
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT084
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT235
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT084
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT235
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: WPP3-JP047
     set_name: World Premiere Pack 2022
