--- a/data/cards/27204311.yaml
+++ b/data/cards/27204311.yaml
@@ -58,9 +58,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Secret Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN261
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Ultra Rare
   de:
   - set_number: TN19-DE013
     set_name: 2019 Gold Sarcophagus Tin
@@ -78,6 +79,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Secret Rare
+  - set_number: MP22-DE261
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TN19-FR013
     set_name: 2019 Gold Sarcophagus Tin
@@ -95,6 +100,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Secret Rare
+  - set_number: MP22-FR261
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TN19-IT013
     set_name: 2019 Gold Sarcophagus Tin
@@ -112,6 +121,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Secret Rare
+  - set_number: MP22-IT261
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TN19-PT013
     set_name: 2019 Gold Sarcophagus Tin
@@ -129,6 +142,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Secret Rare
+  - set_number: MP22-PT261
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP19-JP067
     set_name: Extra Pack 2019
