--- a/data/cards/28126717.yaml
+++ b/data/cards/28126717.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN220
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE058
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE220
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR058
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR220
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT058
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT220
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT058
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT220
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP058
     set_name: Burst of Destiny
