--- a/data/cards/31944175.yaml
+++ b/data/cards/31944175.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN246
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE095
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE246
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR095
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR246
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT095
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT246
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT095
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT246
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ST19-JP004
     set_name: Starter Deck 2019
