--- a/data/cards/33250142.yaml
+++ b/data/cards/33250142.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN210
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE040
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE210
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR040
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR210
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT040
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT210
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT040
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT210
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP040
     set_name: Burst of Destiny
