--- a/data/cards/35870016.yaml
+++ b/data/cards/35870016.yaml
@@ -44,26 +44,46 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-EN185
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: DAMA-DE099
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-DE185
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: DAMA-FR099
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-FR185
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: DAMA-IT099
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-IT185
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: DAMA-PT099
     set_name: Dawn of Majesty
     rarities:
     - Common
+  - set_number: MP22-PT185
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: LVDS-JPA07
     set_name: LINK VRAINS Duelist Set
