--- a/data/cards/37818794.yaml
+++ b/data/cards/37818794.yaml
@@ -64,9 +64,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Starlight Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN264
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: MP20-DE249
     set_name: 2020 Tin of Lost Memories
@@ -76,6 +77,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Starlight Rare
+  - set_number: MP22-DE264
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: MP20-FR249
     set_name: 2020 Tin of Lost Memories
@@ -85,6 +90,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Starlight Rare
+  - set_number: MP22-FR264
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: MP20-IT249
     set_name: 2020 Tin of Lost Memories
@@ -94,6 +103,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Starlight Rare
+  - set_number: MP22-IT264
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: MP20-PT249
     set_name: 2020 Tin of Lost Memories
@@ -103,6 +116,10 @@ sets:
     set_name: Brothers of Legend
     rarities:
     - Starlight Rare
+  - set_number: MP22-PT264
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: LGB1-JP001
     set_name: Legendary Gold Box
