--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -145,9 +145,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
-  - set_number: MP22-EN???
+  - set_number: MP22-EN268
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: CT2-DE004
     set_name: Collectible Tins 2005
@@ -249,9 +250,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
-  - set_number: MP22-DE???
+  - set_number: MP22-DE268
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: CT2-FR004
     set_name: Collectible Tins 2005
@@ -353,9 +355,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
-  - set_number: MP22-FR???
+  - set_number: MP22-FR268
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: RDS-ITSE2
     set_name: 'Rise of Destiny: Special Edition'
@@ -453,9 +456,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
-  - set_number: MP22-IT???
+  - set_number: MP22-IT268
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: CT2-PT004
     set_name: Collectible Tins 2005
@@ -549,9 +553,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Ultra Rare
-  - set_number: MP22-PT???
+  - set_number: MP22-PT268
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: G3-11
     set_name: 'Yu-Gi-Oh! Duel Monsters III: Tri-Holy God Advent Official Tournament Street Duel Legend of Power prize card'
