--- a/data/cards/46033517.yaml
+++ b/data/cards/46033517.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN203
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DE028
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE203
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FR028
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR203
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-IT028
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT203
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PT028
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT203
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP028
     set_name: Burst of Destiny
