--- a/data/cards/48784854.yaml
+++ b/data/cards/48784854.yaml
@@ -40,24 +40,44 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN186
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BODE-DE000
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE186
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR000
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR186
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT000
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT186
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT000
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT186
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
 yugipedia_page_id: 836298
