--- a/data/cards/52038441.yaml
+++ b/data/cards/52038441.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-EN260
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: ETCO-DE036
     set_name: Eternity Code
@@ -70,6 +74,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-DE260
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: ETCO-FR036
     set_name: Eternity Code
@@ -84,6 +92,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-FR260
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: ETCO-IT036
     set_name: Eternity Code
@@ -98,6 +110,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-IT260
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: ETCO-PT036
     set_name: Eternity Code
@@ -112,6 +128,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-PT260
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: ETCO-JP036
     set_name: Eternity Code
