--- a/data/cards/55151012.yaml
+++ b/data/cards/55151012.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-EN191
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DE010
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-DE191
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FR010
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-FR191
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-IT010
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-IT191
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PT010
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-PT191
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP010
     set_name: Burst of Destiny
