--- a/data/cards/55273560.yaml
+++ b/data/cards/55273560.yaml
@@ -46,30 +46,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-EN188
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE007
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-DE188
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR007
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-FR188
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT007
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-IT188
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT007
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: MP22-PT188
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP007
     set_name: Burst of Destiny
