--- a/data/cards/55343303.yaml
+++ b/data/cards/55343303.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN218
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE056
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE218
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR056
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR218
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT056
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT218
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT056
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT218
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: BODE-JP056
     set_name: Burst of Destiny
