--- a/data/cards/55521751.yaml
+++ b/data/cards/55521751.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-EN221
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE059
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-DE221
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR059
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-FR221
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT059
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-IT221
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT059
     set_name: Burst of Destiny
     rarities:
     - Super Rare
+  - set_number: MP22-PT221
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP059
     set_name: Burst of Destiny
