--- a/data/cards/56790702.yaml
+++ b/data/cards/56790702.yaml
@@ -46,24 +46,44 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN233
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
-  - set_number: BODE-FR082
+  - set_number: BODE-DE082
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE233
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BODE-FR082
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR233
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BODE-IT082
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT233
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BODE-PT082
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT233
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
 yugipedia_page_id: 836293
