--- a/data/cards/59438930.yaml
+++ b/data/cards/59438930.yaml
@@ -79,9 +79,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: MP22-EN???
+  - set_number: MP22-EN255
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: CROS-DE033
     set_name: Crossed Souls
@@ -119,6 +120,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-DE255
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: CROS-FR033
     set_name: Crossed Souls
@@ -156,6 +161,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-FR255
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: CROS-IT033
     set_name: Crossed Souls
@@ -193,6 +202,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-IT255
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: CROS-PT033
     set_name: Crossed Souls
@@ -230,6 +243,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: MP22-PT255
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: CROS-JP033
     set_name: Crossed Souls
