--- a/data/cards/59820352.yaml
+++ b/data/cards/59820352.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MP22-EN251
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DR2-DE100
     set_name: Dark Revelation Volume 2
@@ -62,6 +66,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MP22-DE251
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DR2-FR100
     set_name: Dark Revelation Volume 2
@@ -75,6 +83,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MP22-FR251
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DR2-IT100
     set_name: Dark Revelation Volume 2
@@ -88,6 +100,10 @@ sets:
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
     - Common
+  - set_number: MP22-IT251
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: 307-044
     set_name: Invader of Darkness (set)
