--- a/data/cards/60461804.yaml
+++ b/data/cards/60461804.yaml
@@ -62,26 +62,62 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Starlight Rare
+  - set_number: MP22-EN209
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE039
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: POTE-DE100
+    set_name: Power of the Elements
+    rarities:
+    - Starlight Rare
+  - set_number: MP22-DE209
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR039
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: POTE-FR100
+    set_name: Power of the Elements
+    rarities:
+    - Starlight Rare
+  - set_number: MP22-FR209
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT039
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: POTE-IT100
+    set_name: Power of the Elements
+    rarities:
+    - Starlight Rare
+  - set_number: MP22-IT209
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT039
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: POTE-PT100
+    set_name: Power of the Elements
+    rarities:
+    - Starlight Rare
+  - set_number: MP22-PT209
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP039
     set_name: Burst of Destiny
