--- a/data/cards/60643553.yaml
+++ b/data/cards/60643553.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: MP22-EN259
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: DANE-DE025
     set_name: Dark Neostorm
@@ -82,6 +86,10 @@ sets:
     set_name: The Lost Art Promotion 2020 L
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE259
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: DANE-FR025
     set_name: Dark Neostorm
@@ -99,6 +107,10 @@ sets:
     set_name: The Lost Art Promotion 2020 L
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR259
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: DANE-IT025
     set_name: Dark Neostorm
@@ -116,6 +128,10 @@ sets:
     set_name: The Lost Art Promotion 2020 L
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT259
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: DANE-PT025
     set_name: Dark Neostorm
@@ -133,6 +149,10 @@ sets:
     set_name: The Lost Art Promotion 2020 L
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT259
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: DANE-JP025
     set_name: Dark Neostorm
