--- a/data/cards/65681983.yaml
+++ b/data/cards/65681983.yaml
@@ -43,26 +43,46 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN265
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: MP21-DE258
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE265
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: MP21-FR258
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR265
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: MP21-IT258
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT265
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: MP21-PT258
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT265
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: VJMP-JP164
     set_name: V Jump July 2019 promotional card
