--- a/data/cards/73642296.yaml
+++ b/data/cards/73642296.yaml
@@ -94,6 +94,10 @@ sets:
     set_name: Dimension Force
     rarities:
     - Starlight Rare
+  - set_number: MP22-EN258
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: FLOD-DE033
     set_name: Flames of Destruction
@@ -115,6 +119,10 @@ sets:
     set_name: Dimension Force
     rarities:
     - Starlight Rare
+  - set_number: MP22-DE258
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: FLOD-FR033
     set_name: Flames of Destruction
@@ -136,6 +144,10 @@ sets:
     set_name: Dimension Force
     rarities:
     - Starlight Rare
+  - set_number: MP22-FR258
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: FLOD-IT033
     set_name: Flames of Destruction
@@ -157,6 +169,10 @@ sets:
     set_name: Dimension Force
     rarities:
     - Starlight Rare
+  - set_number: MP22-IT258
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: FLOD-PT033
     set_name: Flames of Destruction
@@ -178,6 +194,10 @@ sets:
     set_name: Dimension Force
     rarities:
     - Starlight Rare
+  - set_number: MP22-PT258
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: FLOD-JP033
     set_name: Flames of Destruction
