--- a/data/cards/78362751.yaml
+++ b/data/cards/78362751.yaml
@@ -47,9 +47,17 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN202
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE023
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-DE202
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   fr:
@@ -57,14 +65,26 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR202
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT023
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT202
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT023
     set_name: Burst of Destiny
+    rarities:
+    - Common
+  - set_number: MP22-PT202
+    set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
   ja:
