--- a/data/cards/79371769.yaml
+++ b/data/cards/79371769.yaml
@@ -41,26 +41,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN231
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   de:
   - set_number: BODE-DE080
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE231
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   fr:
   - set_number: BODE-FR080
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR231
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   it:
   - set_number: BODE-IT080
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT231
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   pt:
   - set_number: BODE-PT080
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT231
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
   ja:
   - set_number: BODE-JP080
     set_name: Burst of Destiny
