--- a/data/cards/80433039.yaml
+++ b/data/cards/80433039.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-EN196
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DE015
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-DE196
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FR015
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-FR196
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-IT015
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-IT196
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PT015
     set_name: Burst of Destiny
     rarities:
     - Common
+  - set_number: MP22-PT196
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP015
     set_name: Burst of Destiny
