--- a/data/cards/80611581.yaml
+++ b/data/cards/80611581.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-EN198
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   de:
   - set_number: BODE-DESP1
     set_name: Burst of Destiny Premiere! promotional card
@@ -60,6 +64,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-DE198
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   fr:
   - set_number: BODE-FRSP1
     set_name: Burst of Destiny Premiere! promotional card
@@ -69,6 +77,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-FR198
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   it:
   - set_number: BODE-ITSP1
     set_name: Burst of Destiny Premiere! promotional card
@@ -78,6 +90,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-IT198
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   pt:
   - set_number: BODE-PTSP1
     set_name: Burst of Destiny Premiere! promotional card
@@ -87,6 +103,10 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Secret Rare
+  - set_number: MP22-PT198
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: BODE-JP017
     set_name: Burst of Destiny
