--- a/data/cards/87240371.yaml
+++ b/data/cards/87240371.yaml
@@ -42,26 +42,46 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-EN240
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   de:
   - set_number: BODE-DE089
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-DE240
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   fr:
   - set_number: BODE-FR089
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-FR240
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   it:
   - set_number: BODE-IT089
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-IT240
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   pt:
   - set_number: BODE-PT089
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
+  - set_number: MP22-PT240
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Common
   ja:
   - set_number: WPP3-JP011
     set_name: World Premiere Pack 2022
