--- a/data/cards/88753594.yaml
+++ b/data/cards/88753594.yaml
@@ -40,11 +40,8 @@ text:
     이 카드는 융합 소환으로밖에 특수 소환할 수 없다. 이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 공격력은, 서로의 묘지의 야수전사족 몬스터 및 제외되어 있는 야수전사족 몬스터의 수 × 200 올린다. ②: 이 카드는 상대 효과의 대상이 되지 않는다. ③: 묘지의 이 카드를 제외하고, 자신 필드의 융합 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 3000 올린다. 이 효과는 이 카드가 묘지로 보내진 턴에는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    「月光」怪兽×3
-    这张卡不用融合召唤不能特殊召唤。这个卡名的③的效果1回合只能使用1次。
-    ①：这张卡的攻击力上升双方墓地的兽战士族怪兽以及除外中的兽战士族怪兽数量×200。
-    ②：这张卡不会成为对方的效果的对象。
-    ③：把墓地的这张卡除外，以自己场上1只融合怪兽为对象才能发动。那只怪兽的攻击力直到回合结束时上升3000。这个效果在这张卡送去墓地的回合不能发动。
+    "月光"怪兽×3
+    此卡仅可以融合召唤方式特殊召唤。此卡名的③效果1回合仅可使用1次。①：此卡的攻击力上升相当于双方墓地兽战士族怪兽及被除外的兽战士族怪兽数量×200的数值。②：此卡不会成为对手效果的对象。③：将墓地的此卡除外，以自己场上的1只融合怪兽为对象可以发动。该怪兽的攻击力直至回合结束时为止上升3000。此效果在此卡被送至墓地的回合不可发动。
 card_type: Monster
 monster_type_line: Beast-Warrior / Fusion / Effect
 attribute: DARK
@@ -110,4 +107,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: DP21-SC058
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 580409
