--- a/data/cards/91800273.yaml
+++ b/data/cards/91800273.yaml
@@ -45,26 +45,46 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin
     rarities:
     - Prismatic Secret Rare
+  - set_number: MP22-EN263
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TN19-DE012
     set_name: 2019 Gold Sarcophagus Tin
     rarities:
     - Prismatic Secret Rare
+  - set_number: MP22-DE263
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TN19-FR012
     set_name: 2019 Gold Sarcophagus Tin
     rarities:
     - Prismatic Secret Rare
+  - set_number: MP22-FR263
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TN19-IT012
     set_name: 2019 Gold Sarcophagus Tin
     rarities:
     - Prismatic Secret Rare
+  - set_number: MP22-IT263
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TN19-PT012
     set_name: 2019 Gold Sarcophagus Tin
     rarities:
     - Prismatic Secret Rare
+  - set_number: MP22-PT263
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP19-JP066
     set_name: Extra Pack 2019
