--- a/data/cards/93672138.yaml
+++ b/data/cards/93672138.yaml
@@ -61,30 +61,50 @@ sets:
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: MP22-EN216
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: BODE-DE051
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: MP22-DE216
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: BODE-FR051
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: MP22-FR216
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: BODE-IT051
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: MP22-IT216
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: BODE-PT051
     set_name: Burst of Destiny
     rarities:
     - Ultra Rare
     - Starlight Rare
+  - set_number: MP22-PT216
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: BODE-JP051
     set_name: Burst of Destiny
