--- a/data/cards/57579381.yaml
+++ b/data/cards/57579381.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     这张卡在墓地存在的场合，自己的准备阶段时只有1次，自己回复200基本分。
 card_type: Monster
-monster_type_line: Fairy / Effect
+monster_type_line: Fiend / Effect
 attribute: DARK
 level: 5
 atk: 1700
